--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ categories = ["command-line-utilities", "command-line-interface", "development-t
 [dependencies]
 base64 = "0.12.1"
 colored = "2.0.0"
+table-format = "0.0.4"
